// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data module transformation file should transform a CSV file 1`] = `
"id,size,quantity
1-3,44,1
2-3,38,1
2-1,36,2
2-2,37,2
1-1,42,3
1-2,43,20"
`;

exports[`data module transformation file should transform a JSON file 1`] = `
"{
  \\"products\\": [
    {
      \\"id\\": \\"1\\",
      \\"name\\": \\"Leather shoe\\",
      \\"variants\\": [
        {
          \\"id\\": \\"1-1\\",
          \\"size\\": \\"42\\",
          \\"quantity\\": 3
        },
        {
          \\"id\\": \\"1-2\\",
          \\"size\\": \\"43\\",
          \\"quantity\\": 20
        },
        {
          \\"id\\": \\"1-3\\",
          \\"size\\": \\"44\\",
          \\"quantity\\": 1
        }
      ]
    },
    {
      \\"id\\": \\"2\\",
      \\"name\\": \\"Stiletto shoe\\",
      \\"variants\\": [
        {
          \\"id\\": \\"2-1\\",
          \\"size\\": \\"36\\",
          \\"quantity\\": 2
        },
        {
          \\"id\\": \\"2-2\\",
          \\"size\\": \\"37\\",
          \\"quantity\\": 2
        },
        {
          \\"id\\": \\"2-3\\",
          \\"size\\": \\"38\\",
          \\"quantity\\": 1
        }
      ]
    }
  ],
  \\"variants\\": [
    {
      \\"id\\": \\"1-1\\",
      \\"size\\": \\"42\\",
      \\"quantity\\": 3
    },
    {
      \\"id\\": \\"1-2\\",
      \\"size\\": \\"43\\",
      \\"quantity\\": 20
    },
    {
      \\"id\\": \\"1-3\\",
      \\"size\\": \\"44\\",
      \\"quantity\\": 1
    },
    {
      \\"id\\": \\"2-1\\",
      \\"size\\": \\"36\\",
      \\"quantity\\": 2
    },
    {
      \\"id\\": \\"2-2\\",
      \\"size\\": \\"37\\",
      \\"quantity\\": 2
    },
    {
      \\"id\\": \\"2-3\\",
      \\"size\\": \\"38\\",
      \\"quantity\\": 1
    }
  ]
}"
`;

exports[`data module transformation file should transform a JSON file 2`] = `
"id,size,quantity
1-1,42,3
1-2,43,20
1-3,44,1
2-1,36,2
2-2,37,2
2-3,38,1"
`;

exports[`data module transformation file should transform a YAML file 1`] = `
"products:
  - id: \\"1\\"
    name: Leather shoe
    variants:
      - id: 1-1
        size: \\"42\\"
        quantity: 3
      - id: 1-2
        size: \\"43\\"
        quantity: 20
      - id: 1-3
        size: \\"44\\"
        quantity: 1
  - id: \\"2\\"
    name: Stiletto shoe
    variants:
      - id: 2-1
        size: \\"36\\"
        quantity: 2
      - id: 2-2
        size: \\"37\\"
        quantity: 2
      - id: 2-3
        size: \\"38\\"
        quantity: 1
"
`;

exports[`data module transformation object should transform a string 1`] = `"{\\"id\\":\\"Product 1: Shoe\\",\\"name\\":\\"1\\"}.{\\"id\\":\\"Product 2: Shirt\\",\\"name\\":\\"2\\"}.{\\"id\\":\\"Product 3: Jeans\\",\\"name\\":\\"3\\"}"`;

exports[`data module transformation object should transform an array 1`] = `
"[
  {
    \\"id\\": \\"1\\"
  },
  {
    \\"id\\": \\"2\\"
  }
]"
`;

exports[`data module transformation object should transform an object 1`] = `
"{
  \\"product-1\\": {
    \\"name\\": \\"Shoe\\"
  },
  \\"product-2\\": {
    \\"name\\": \\"Shirt\\"
  }
}"
`;
